Forgot password functionality.

--- a/client/views/layouts/signin.html
+++ b/client/views/layouts/signin.html
@@ -1,5 +1,5 @@
 <template name="signIn">
-<div class="container" id="sign-in-form">
+<div class="container sign-in-form">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Sign in</h3>
@@ -10,7 +10,8 @@
           <label for="signin_email">Email</label>
           <input type="email" class="form-control" id="signin_email" placeholder="example@email.com"/>
           <br />
-          <label for="signin_password">Password</label>
+          <label for="signin_password">Password</label> <a href="#"
+            class="forgotPassword">(forgot password?)</a>
           <input type="password" class="form-control" id="signin_password"/>
           <br />
           <input type="submit" value="Sign in" class="btn btn-primary"/>
