--- a/client/views/layouts/signinButtons.html
+++ b/client/views/layouts/signinButtons.html
@@ -7,7 +7,7 @@
     <!--
     <li><a href="#">Action</a></li>
     <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
+    <li><a href="#" class="resetPassword">Edit Account</a></li>
     <li class="divider"></li>
     -->
     <li><a href="#" id="signout">Sign out</a></li>
