--- a/client/views/users/newpassword.html
+++ b/client/views/users/newpassword.html
@@ -1,5 +1,5 @@
 <template name="enrollAccount">
-<div class="container" id="sign-in-form">
+<div class="container sign-in-form">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">New password</h3>
@@ -19,4 +19,8 @@
     </div>
   </div>
 </div>
+</template>
+
+<template name="resetPassword">
+{{> enrollAccount}}
 </template>
