Shifts link now called dashboard.

--- a/client/views/layouts/header.html
+++ b/client/views/layouts/header.html
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         {{#if currentUser}}
         <li><a href="{{pathFor 'shiftsIndex'}}"><span class="glyphicon
-            glyphicon-time"> </span>Shifts</a></li>
+            glyphicon-time"> </span>Dashboard</a></li>
         <li><a href="{{pathFor 'calendar'}}"><span class="glyphicon
             glyphicon-calendar"> </span>Calendar</a></li>
         {{/if}}
