Shifts now have a type (selected from user's types).

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -63,6 +63,7 @@
               <th>Day</th>
               <th>Start Time</th>
               <th>End Time</th>
+              <th>Type</th>
             </tr>
           </thead>
           <tbody>
@@ -142,6 +143,7 @@
 <td> {{day}} </td>
 <td> {{startTime}} </td>
 <td> {{endTime}} </td>
+<td> {{type}} </td>
 </template>
 
 <template name="shiftTableHeader">
@@ -150,6 +152,7 @@
     <th>Day</th>
     <th>Start Time</th>
     <th>End Time</th>
+    <th>Type</th>
     <th>Actions</th>
   </tr>
 </thead>
