Users must provide reason to administrators on shift drop.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -110,6 +110,9 @@
                 <label for="{{_id}}-email_message">Message</label>
                 <textarea rows="5" class="form-control" id="{{_id}}-email_message">I have dropped a PEMRAP shift on {{formattedDate}} from {{startTime}} to {{endTime}}.</textarea>
                 <br />
+                <label for="{{_id}}-email_excuse">Message for Administrators</label>
+                <textarea rows="5" class="form-control" id="{{_id}}-email_excuse" placeholder="Reason for dropping shift..."></textarea>
+                <br />
               </div>
             </form>
           </div>
