--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -142,9 +142,18 @@
 </template>
 
 <template name="shiftRow">
-<td>{{day}}</td>
-<td>{{startTime}}</td>
-<td>{{endTime}}</td>
+<td>
+  <span class="hidden-xs hidden-sm">{{day}}</span>
+  <span class="hidden-md hidden-lg">{{dayMD}}</span>
+</td>
+<td>
+  <span class="hidden-xs hidden-sm">{{start}}</span>
+  <span class="hidden-md hidden-lg">{{startMD}}</span>
+</td>
+<td>
+  <span class="hidden-xs hidden-sm">{{end}}</span>
+  <span class="hidden-md hidden-lg">{{endMD}}</span>
+</td>
 <td>{{type}}</td>
 </template>
 
@@ -152,8 +161,8 @@
 <thead>
   <tr>
     <th>Day</th>
-    <th>Start Time</th>
-    <th>End Time</th>
+    <th>Start</th>
+    <th>End</th>
     <th>Type</th>
     <th>Actions</th>
   </tr>
