--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -125,17 +125,10 @@
 
 <template name="shiftItemForUser">
 <tr>
-  {{> userShiftRow}}
+  {{> shiftRow}}
   <td>
     <button class="deleteShiftButton btn btn-danger btn-sm">Delete</button>
     <button class="dropShiftButton btn btn-warning btn-sm">Drop</button>
   </td>
 </tr>
-</template>
-
-<template name="userShiftRow">
-<td> {{day}} </td>
-<td> {{startTime}} </td>
-<td> {{endTime}} </td>
-<td> {{type}} </td>
 </template>
