Fixed routing issue with creating user from console.

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -46,8 +46,8 @@ li .glyphicon {
 }
 
 .event-student {
-  background: #FF6B6B !important;
-  color: #fff !important;
+  background: #E7E7E7 !important;
+  color: #333333 !important;
 }
 
 .event-command {
