--- a/client/views/layouts/header.html
+++ b/client/views/layouts/header.html
@@ -17,6 +17,8 @@
             glyphicon-time"> </span>Dashboard</a></li>
         <li><a href="{{pathFor 'calendar'}}"><span class="glyphicon
             glyphicon-calendar"> </span>Calendar</a></li>
+        <li><a href="{{pathFor 'chat'}}"><span class="glyphicon
+            glyphicon-comment"> </span>Chat</a></li>
         {{/if}}
         {{#if isInRole 'admin'}}
         <li><a href="{{pathFor 'usersIndex'}}"><span class="glyphicon glyphicon-user"> </span>Users</a></li>
