--- a/client/views/layouts/header.html
+++ b/client/views/layouts/header.html
@@ -19,7 +19,7 @@
             glyphicon-calendar"> </span>Calendar</a></li>
         {{/if}}
       </ul>
-      <ul class="nav navbar-nav pull-right">
+      <ul class="nav navbar-nav navbar-right">
         {{#if isInRole 'admin'}}
         <li><a href="{{pathFor 'adminDashboard'}}"><span class="glyphicon
             glyphicon-dashboard"> </span>Admin Dashboard</a></li>
