--- a/client/views/admin/dashboard.html
+++ b/client/views/admin/dashboard.html
@@ -3,6 +3,9 @@
   {{> balanceStatCard}}
   {{> shiftLineChart}}
 </div>
+<div class="row">
+  {{> shiftLeaderBoard}}
+</div>
 </template>
 
 <template name="balanceStatCard">
@@ -37,6 +40,38 @@
       <div class="panel-body">
         <div id="shiftLineChart"></div>
       </div>
+    </div>
+  </div>
+</template>
+
+<template name="shiftLeaderBoard">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">User Leaderboard</h3>
+      </div>
+      <div class="panel-body">
+      </div>
+      <table class="table table-hover table-condensed">
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Drops</th>
+            <th>Grabs</th>
+            <th>Net</th>
+          </tr>
+        </thead>
+        <tbody>
+        {{#each users}}
+        <tr>
+          <td>{{profile.name}}</td>
+          <td>Drops</td>
+          <td>Grabs</td>
+          <td>Net</td>
+        </tr>
+        {{/each}}
+        </tbody>
+      </table>
     </div>
   </div>
 </template>
