--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -32,7 +32,7 @@
             data-target="#newShiftsModal">Add shifts</button>
           </li>
           <li>
-          <h3 class="panel-title">Shifts</h3>
+          <h3 class="panel-title">Upcoming Shifts</h3>
           </li>
         </ul>
       </div>
