Added feedback mailto: link in header.

--- a/client/views/layouts/header.html
+++ b/client/views/layouts/header.html
@@ -20,6 +20,8 @@
         {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
+	<li><a href="mailto:adair.david@gmail.com"><span class="glyphicon
+	    glyphicon-envelope"> </span>Submit Feedback</a></li>
         {{#if isInRole 'admin'}}
         <li><a href="{{pathFor 'usersIndex'}}"><span class="glyphicon
             glyphicon-user"> </span>Manage Users</a></li>
