--- a/client/views/layouts/header.html
+++ b/client/views/layouts/header.html
@@ -20,7 +20,7 @@
         {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-	<li><a href="mailto:adair.david@gmail.com"><span class="glyphicon
+	<li><a href="mailto:achpemrap@gmail.com"><span class="glyphicon
 	    glyphicon-envelope"> </span>Submit Feedback</a></li>
         {{#if isInRole 'admin'}}
         <li><a href="{{pathFor 'usersIndex'}}"><span class="glyphicon
