Fixed some aspect ratio stuff with calendar.

--- a/client/views/shifts/calendar.html
+++ b/client/views/shifts/calendar.html
@@ -1,5 +1,5 @@
 <template name="calendar">
   <div class="row-fluid">
-    <div id="shiftCalendar"></div>
+    <div id="shiftCalendar" class="fc"></div>
   </div>
 </template>
