Refactored shift index helper queries into common functions.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -22,7 +22,7 @@
         <table class="table table-hover table-condensed">
           {{> shiftTableHeader}}
           <tbody>
-          {{#each shifts}}
+          {{#each upcomingShifts}}
           {{> shiftItemOwned}}
           {{/each}}
           </tbody>
