--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -1,10 +1,19 @@
 <template name="usersShow">
   <div class="row">
     {{> newShiftsModal}}
-    <div class="col-md-3 hidden-xs">
+    {{> editUserProfileModal}}
+    <div class="col-md-3">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Profile</h3>
+          <ul class="list-inline">
+            <li class="pull-right">
+              <button class="btn btn-sm btn-primary" data-toggle="modal"
+                      data-target="#editUserProfileModal">Edit</button>
+            </li>
+            <li>
+              <h3 class="panel-title">Profile</h3>
+            </li>
+          </ul>
         </div>
         <div class="panel-body">
           <h4>Name</h4>
@@ -127,4 +136,43 @@
       <button class="dropShiftButton btn btn-warning btn-sm">Drop User</button>
     </td>
   </tr>
+</template>
+
+<template name="editUserProfileModal">
+  <div class="modal fade" id="editUserProfileModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Edit user profile</h4>
+        </div>
+        <div class="modal-body">
+          <form class="user-form">
+            <div class="container-fluid">
+              <label for="userName">Name</label>
+              <input type="text" class="form-control" id="userName" value={{profile.name}}>
+              <label for="joinDate">Join Date</label>
+              <input type="date" class="form-control" id="joinDate" value={{formatedStartDate}}>
+              <label for="userRole">Role</label>
+              <select class="form-control" id="userRole">
+                {{#each allRoles}}
+                {{#if userIsInRole ../.. name}}
+                <option value="{{name}}" selected>{{name}}</option>
+                {{else}}
+                <option value="{{name}}">{{name}}</option>
+                {{/if}}
+                {{/each}}
+              </select>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="editUserProfileButton btn btn-success" data-dismiss="modal">
+            Update
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
