Changed terminology from 'Pick Ups' to 'Grabs'.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -90,7 +90,7 @@
     {{> shiftRow}}
     <td>
       <button class="btn btn-danger btn-sm" data-toggle="modal"
-              data-target="#{{_id}}-dropModal">Drop</button>
+              data-target="#{{_id}}-dropModal">Drop Shift</button>
 
       <div class="modal fade" id="{{_id}}-dropModal" tabindex="-1" role="dialog"
            aria-labelledby="myModalLabel" aria-hidden="true">
@@ -132,7 +132,7 @@
   <tr>
     {{> shiftRow}}
     <td>
-      <button type="button" class="btn btn-success btn-sm" id="pickup-button">Pick up</button>
+      <button type="button" class="btn btn-success btn-sm" id="grab-button">Grab Shift</button>
     </td>
   </tr>
 </template>
