--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -18,6 +18,8 @@
         <div class="panel-body">
           <h4>Name</h4>
           <p>{{profile.name}}</p>
+          <h4>Email</h4>
+          <p>{{emails.[0].address}}</p>
           <h4>Joined</h4>
           <p>{{created}}</p>
           <h4>Roles</h4>
